bk_ida/gccida/g2/if_convert
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_convert/src/ifcvt.c:3215:7: error: conflicting types for 'if_convert'
void  if_convert( 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_convert/src/rtl.h:2127:13: note: previous declaration is here
extern void if_convert                  PARAMS ((int));
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_convert/src/ifcvt.c:3274:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v57; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_convert/src/ifcvt.c:3279:4: error: expected ';' after expression
rtx v62; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_convert/src/ifcvt.c:3279:5: error: use of undeclared identifier 'v62'
rtx v62; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_convert/src/ifcvt.c:3280:4: error: expected ';' after expression
rtx v63; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_convert/src/ifcvt.c:3280:5: error: use of undeclared identifier 'v63'
rtx v63; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_convert/src/ifcvt.c:3284:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_convert/src/ifcvt.c:3284:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_convert/src/ifcvt.c:3287:4: error: expected ';' after expression
rtx v70; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_convert/src/ifcvt.c:3287:5: error: use of undeclared identifier 'v70'
rtx v70; // r13 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_convert/src/ifcvt.c:3293:4: error: expected ';' after expression
rtx v76; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_convert/src/ifcvt.c:3293:5: error: use of undeclared identifier 'v76'
rtx v76; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_convert/src/ifcvt.c:3300:4: error: expected ';' after expression
rtx a; // r8 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_convert/src/ifcvt.c:3300:5: error: use of undeclared identifier 'a'
rtx a; // r8 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_convert/src/ifcvt.c:3310:4: error: expected ';' after expression
rtx v93; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_convert/src/ifcvt.c:3310:5: error: use of undeclared identifier 'v93'
rtx v93; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_convert/src/ifcvt.c:3312:4: error: expected ';' after expression
rtx v95; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_convert/src/ifcvt.c:3312:5: error: use of undeclared identifier 'v95'
rtx v95; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_convert/src/ifcvt.c:3313:4: error: expected ';' after expression
rtx v96; // rdi 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_convert/src/obj/ifcvt.o] Error 1
